# Computational-Geometry

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  cube1.binvox  cube1.vox  cube12.txt  figure.vox  five.vox  four.vox  main.cpp  main1.cpp  main2.cpp  main3.cpp  nine.vox  one.vox  output.vox  planar_cube.txt  two.vox  voxel  voxel1.vox  voxel_converter  voxel_projection  voxel_to_mesh  voxeldatareader.cpp  voxelmesh.cpp  voxelmesh1.cpp  voxelmesh2.cpp  voxelmesh3.cs
Task practice/2dMatrix/: a  twoDMatrix.cpp
Task practice/BijectionStrings/: a  bijectionStrings.cpp
Task practice/LongestRepeatingSubstring/: a  longestrepeatingsubstring.cpp
Task practice/MaxWidth/: a  stringMaxWidth.cpp
Task practice/StringPattern/: a  stringPattern.cpp
Task practice/WaterTrap/: A  waterTrap.cpp
